--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -858,7 +858,7 @@ BEGIN
 END
 
 IDD_HANDLESTATS DIALOGEX 0, 0, 219, 175
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Handle Statistics"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
