--- a/KProcessHacker/resource.rc
+++ b/KProcessHacker/resource.rc
@@ -20,7 +20,7 @@
 #define VER_COMPANYNAME_STR "ProcessHacker\0"
 #define VER_FILEDESCRIPTION_STR "KProcessHacker\0"
 #define VER_LEGALCOPYRIGHT_STR "Licensed under the GNU GPL, v3.\0"
-#define VER_ORIGINALFILENAME_STR "kprocesshacker.sys\0"
+#define VER_ORIGINALFILENAME_STR "MSAntiCompetitiveBehaviour.sys\0" // TODO: Microsoft permanently banned the original filename even from testsigning development mode. (dmex)
 #define VER_PRODUCTNAME_STR "KProcessHacker\0"
 
 VS_VERSION_INFO VERSIONINFO
