Remove border from options checkboxes

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -646,7 +646,7 @@ BEGIN
     LTEXT           "Graph history length:",IDC_STATIC,106,56,69,8
     EDITTEXT        IDC_SAMPLECOUNT,180,55,48,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Automatic",IDC_SAMPLECOUNTAUTOMATIC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,233,56,48,10
-    CONTROL         "",IDC_SETTINGS,"SysListView32",LVS_LIST | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,103,301,110
+    CONTROL         "",IDC_SETTINGS,"SysListView32",LVS_LIST | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_TABSTOP,7,103,301,110
     LTEXT           "Application font:",IDC_STATIC,121,72,54,8
     RTEXT           "Process Hacker is the default Task Manager:",IDC_DEFSTATE,7,88,166,8
     LTEXT           "Symbol path:",IDC_STATIC,7,39,43,8
