Add incremental search support for column chooser #921

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -676,10 +676,10 @@ CAPTION "Choose Columns"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Inactive columns:",IDC_STATIC,7,21,57,8
-    LISTBOX         IDC_INACTIVE,7,49,129,153,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_INACTIVE,7,49,129,153,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Show >",IDC_SHOW,139,105,50,14
     PUSHBUTTON      "< Hide",IDC_HIDE,139,121,50,14
-    LISTBOX         IDC_ACTIVE,192,49,129,153,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_ACTIVE,192,49,129,153,LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Move up",IDC_MOVEUP,326,49,50,14
     PUSHBUTTON      "Move down",IDC_MOVEDOWN,326,66,50,14
     PUSHBUTTON      "OK",IDOK,272,206,50,14
