--- a/ProcessHacker/ProcessHacker.vcxproj
+++ b/ProcessHacker/ProcessHacker.vcxproj
@@ -546,6 +546,7 @@
     <Image Include="resources\magnifier.ico" />
     <Image Include="resources\pencil.ico" />
     <Image Include="resources\pin.ico" />
+    <Image Include="resources\shield.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
