--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -502,7 +502,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,169,206,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,222,206,50,14
-    LTEXT           "Affinity controls which CPUs threads are allowed to execute on.",IDC_STATIC,7,7,265,11
+    LTEXT           "Affinity controls which CPUs threads are allowed to execute on.",IDC_STATIC,7,7,212,11
     CONTROL         "CPU 0",IDC_CPU0,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,21,35,10
     CONTROL         "CPU 1",IDC_CPU1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,33,35,10
     CONTROL         "CPU 2",IDC_CPU2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,44,35,10
@@ -569,6 +569,7 @@ BEGIN
     CONTROL         "CPU 63",IDC_CPU63,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,224,190,39,10
     PUSHBUTTON      "Select all",IDC_SELECTALL,7,206,50,14
     PUSHBUTTON      "Deselect all",IDC_DESELECTALL,60,206,50,14
+    COMBOBOX        IDC_GROUPCPU,220,4,52,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP | NOT WS_VISIBLE
 END
 
 IDD_SYSINFO DIALOGEX 0, 0, 423, 247
