--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -569,7 +569,7 @@ BEGIN
     CONTROL         "CPU 63",IDC_CPU63,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,224,190,39,10
     PUSHBUTTON      "Select all",IDC_SELECTALL,7,206,50,14
     PUSHBUTTON      "Deselect all",IDC_DESELECTALL,60,206,50,14
-    COMBOBOX        IDC_GROUPCPU,220,4,52,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP | NOT WS_VISIBLE
+    COMBOBOX        IDC_GROUPCPU,220,4,52,30,CBS_DROPDOWNLIST | CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_SYSINFO DIALOGEX 0, 0, 423, 247
