--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -1299,7 +1299,10 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "WMI Providers"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,2,2,256,256
+    PUSHBUTTON      "Refresh",IDC_REFRESH,53,2,50,14
+    PUSHBUTTON      "Options",IDC_OPTIONS,2,2,50,14
+    EDITTEXT        IDC_SEARCH,114,3,144,14,ES_AUTOHSCROLL
+    CONTROL         "",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0xa,2,19,256,239,WS_EX_CLIENTEDGE
 END
 
 IDD_COLUMNSETS DIALOGEX 0, 0, 231, 188
