Rename process WMI Providers tab

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -1296,7 +1296,7 @@ END
 
 IDD_PROCWMIPROVIDERS DIALOGEX 0, 0, 260, 260
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "WMI Providers"
+CAPTION "WMI"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Refresh",IDC_REFRESH,53,2,50,14
