--- a/KProcessHacker/resource.rc
+++ b/KProcessHacker/resource.rc
@@ -17,11 +17,11 @@
 #define VER_PRIVATEBUILD 0
 #define VER_PRERELEASE 0
 
-#define VER_COMPANYNAME_STR "ProcessHacker\0"
-#define VER_FILEDESCRIPTION_STR "ProcessHacker\0"
+#define VER_COMPANYNAME_STR "System Informer\0"
+#define VER_FILEDESCRIPTION_STR "System Informer\0"
 #define VER_LEGALCOPYRIGHT_STR "Copyright (c) 2022 Winsider Seminars & Solutions, Inc.  All rights reserved.\0"
-#define VER_ORIGINALFILENAME_STR "ProcessHacker.sys\0"
-#define VER_PRODUCTNAME_STR "ProcessHacker\0"
+#define VER_ORIGINALFILENAME_STR "KSystemInformer.sys\0"
+#define VER_PRODUCTNAME_STR "System Informer\0"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION    	VER_FILEVERSION
