--- a/ProcessHacker/version.rc
+++ b/ProcessHacker/version.rc
@@ -67,13 +67,13 @@ BEGIN
     BEGIN
         BLOCK "0c0904b0"
         BEGIN
-            VALUE "CompanyName", "Process Hacker"
-            VALUE "FileDescription", "Process Hacker"
+            VALUE "CompanyName", "System Informer"
+            VALUE "FileDescription", "System Informer"
             VALUE "FileVersion", PHAPP_VERSION_STRING
-            VALUE "InternalName", "ProcessHacker.exe"
+            VALUE "InternalName", "SystemInformer.exe"
             VALUE "LegalCopyright", "Copyright (c) 2022 Winsider Seminars & Solutions, Inc.  All rights reserved."
-            VALUE "OriginalFilename", "ProcessHacker.exe"
-            VALUE "ProductName", "Process Hacker"
+            VALUE "OriginalFilename", "SystemInformer.exe"
+            VALUE "ProductName", "System Informer"
             VALUE "ProductVersion", PHAPP_VERSION_STRING
         END
     END
