--- a/plugins/NetworkTools/NetworkTools.rc
+++ b/plugins/NetworkTools/NetworkTools.rc
@@ -71,7 +71,7 @@ BEGIN
     LTEXT           "GeoIP database location:",IDC_STATIC,7,60,82,8
     EDITTEXT        IDC_DATABASE,7,73,180,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse...",IDC_BROWSE,193,72,50,14
-    LTEXT           "If a relative path is specified, it is relative to Process Hacker's directory. Environment variables can be used. Changes will take place after Process Hacker is restarted.",IDC_STATIC,7,92,235,26
+    LTEXT           "If a relative path is specified, it is relative to System Informer's directory. Environment variables can be used. Changes will take place after System Informer is restarted.",IDC_STATIC,7,92,235,26
 END
 
 IDD_PING DIALOGEX 0, 0, 329, 151
