--- a/tools/CustomSetupTool/version.rc
+++ b/tools/CustomSetupTool/version.rc
@@ -68,13 +68,13 @@ BEGIN
     BEGIN
         BLOCK "0c0904b0"
         BEGIN
-            VALUE "CompanyName", "Process Hacker"
-            VALUE "FileDescription", "Process Hacker - Setup"
+            VALUE "CompanyName", "System Informer"
+            VALUE "FileDescription", "System Informer - Setup"
             VALUE "FileVersion", PHAPP_VERSION_STRING
-            VALUE "InternalName", "processhacker-setup.exe"
+            VALUE "InternalName", "systeminformer-setup.exe"
             VALUE "LegalCopyright", "Copyright (c) 2022 Winsider Seminars & Solutions, Inc.  All rights reserved."
-            VALUE "OriginalFilename", "processhacker-setup.exe"
-            VALUE "ProductName", "Process Hacker"
+            VALUE "OriginalFilename", "systeminformer-setup.exe"
+            VALUE "ProductName", "System Informer"
             VALUE "ProductVersion", PHAPP_VERSION_STRING
         END
     END
