--- a/KSystemInformer/resource.rc
+++ b/KSystemInformer/resource.rc
@@ -19,8 +19,8 @@
 
 #define VER_COMPANYNAME_STR "System Informer\0"
 #define VER_FILEDESCRIPTION_STR "System Informer\0"
-#define VER_LEGALCOPYRIGHT_STR "Copyright (c) 2022 Winsider Seminars & Solutions, Inc.  All rights reserved.\0"
-#define VER_ORIGINALFILENAME_STR "KSystemInformer.sys\0"
+#define VER_LEGALCOPYRIGHT_STR "Copyright (c) Winsider Seminars & Solutions, Inc.  All rights reserved.\0"
+#define VER_ORIGINALFILENAME_STR "SystemInformer.sys\0"
 #define VER_PRODUCTNAME_STR "System Informer\0"
 
 VS_VERSION_INFO VERSIONINFO
